fix sliver of white space

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -178,6 +178,7 @@ h1 {
 }
 
 footer {
+    overflow: hidden;
     text-align: center;
     font-size: 8pt;
     color: #41326b;
